Convert UpdateList