@@ -25,7 +25,6 @@ import java.util.*;
 
 public class Buildcats {
 	private static void recurse(String out, File dir) throws Exception {
-		System.out.print('.');
 		for (File f : Utils.listSorted(dir)) {
 			if (f.isDirectory()) {
 				recurse(out, f);
@@ -48,18 +47,11 @@ public class Buildcats {
 	}
 
 	public static void buildCatalogues() throws Exception {
-		Runtime rt = Runtime.getRuntime();
-		File[] files = Utils.listSorted(new File("addons"));
-		final int digits = Integer.toString(files.length).length();
-		int progress = 0;
-		for (File addon : files) {
-			System.out.print(String.format(
-			    "[%" + digits + "d/%" + digits + "d] Generating POT file for add-on %s ",
-			    ++progress, files.length, addon.getName()));
-			String dir = "po/" + addon.getName();
-			rt.exec(new String[] {"mkdir", "-p", dir});
-			String out = dir + "/" + addon.getName() + ".pot";
-			rt.exec(new String[] {
+		for (File addon : Utils.listSorted(new File("addons"))) {
+			File dir = new File("po", addon.getName());
+			dir.mkdirs();
+			String out = dir.getPath() + "/" + addon.getName() + ".pot";
+			Runtime.getRuntime().exec(new String[] {
 			            "xgettext", "--language=Lua", "-k_", "--from-code=UTF-8", "--output=" + out,
 			            "--copyright-holder=\"Widelands Development Team\"",
 			            "--msgid-bugs-address=\"https://www.widelands.org/wiki/ReportingBugs/\"",
@@ -67,7 +59,6 @@ public class Buildcats {
 			    .waitFor();
 			recurse(out, new File("screenshots", addon.getName()));
 			recurse(out, addon);
-			System.out.println(" done");
 		}
 	}
 }
